# rendersi1

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cmake_utility.cmake  renderDoc_testVk.cap  vs-chromium-project.txt
built-in/shader/: rdsShaderInterop.hlsl  rds_shader.hlsl  (+1 more)
src/base/test/: CMakeLists.txt
src/base/test/src/: rds_base_test-pch.h
src/base/test/src/rds_base_test/: rds_base_test.cpp
src/base/test/src/rds_base_test/base/: rds_base_test_base.h
src/core/base/: CMakeLists.txt
src/core/base/src/: rds_core_base-config.h  rds_core_base-pch.h  rds_core_base.h
src/core/base/src/rds_core_base/common/: rdsClass_Common.h  rdsDataType_Common.h  rdsEnum_Common.h  rdsError_Common.cpp  rdsError_Common.h  rdsFmt_Common.h  rdsFunction_Common.h  rdsNmsplib_Common.h  rdsTypeTraits_Common.h  rdsUtil_Common.h  rds_core_base_common.h  rds_core_base_traits.cpp  rds_core_base_traits.h
src/core/base/src/rds_core_base/detect_platform/: rds_detect_compiler_gcc.h  rds_detect_compiler_vc.h  rds_detect_platform.h
src/core/base/src/rds_core_base/file_io/: rds_file_io.h  rds_file_io_common.h
src/core/base/src/rds_core_base/job_system/: rds_job_system.h  rds_job_system_common.h
src/core/base/src/rds_core_base/log/: rdsLogger.cpp  rdsLogger.h  rds_log.h  rds_log_common.h
src/core/base/src/rds_core_base/marco/: rds_core_base_build_marco.h  rds_core_base_marco.h  rds_core_base_util_marco.h
src/core/base/src/rds_core_base/math/: rdsRandom.cpp  rdsRandom.h  rds_math.h  rds_math_common.h
src/core/base/src/rds_core_base/memory/: rdsDefaultAllocator.cpp  rdsDefaultAllocator.h  rdsMemory.h  rdsMemoryContext.cpp  rdsMemoryContext.h  rdsThreadAllocator.h  rds_memory.h  rds_memory_common.h
src/core/base/src/rds_core_base/os/: rds_os.h  rds_os_common.h
src/core/base/src/rds_core_base/profiler/: rds_profiler.h  rds_profiler_common.h
src/core/base/src/rds_core_base/stl/: rds_stl.h  rds_stl_common.h
src/core/base/src/rds_core_base/utility/: rdsSingleton.h
src/render/api_layer/: CMakeLists.txt
src/render/api_layer/src/: rds_render_api_layer-config.h  rds_render_api_layer-pch.h  rds_render_api_layer.h
src/render/api_layer/src/rds_render_api_layer/: rdsRenderContext.cpp  rdsRenderContext.h  rdsRenderDevice.cpp  rdsRenderDevice.h  rdsRenderFrame.cpp  rdsRenderFrame.h  rdsRenderUiContext.cpp  rdsRenderUiContext.h  rdsRenderer.cpp  rdsRenderer.h  rdsUploadContext.h
src/render/api_layer/src/rds_render_api_layer/buffer/: rdsParamBuffer.h  rdsRenderGpuBuffer.cpp  rdsRenderGpuBuffer.h  rdsRenderGpuMultiBuffer.cpp  rdsRenderGpuMultiBuffer.h
src/render/api_layer/src/rds_render_api_layer/command/: rdsRenderCommand.cpp  rdsRenderCommand.h  rdsRenderQueue.cpp  rdsRenderQueue.h  rdsRenderRequest.cpp  rdsRenderRequest.h  rdsTransferCommand.cpp  rdsTransferCommand.h  rdsTransferRequest.cpp  rdsTransferRequest.h
src/render/api_layer/src/rds_render_api_layer/common/: rdsRenderApi_Common.cpp  rdsRenderApi_Common.h  rdsRenderDataType.h  rdsRenderResource.cpp  rdsRenderResource.h  rdsRenderResourceState.cpp  rdsRenderResourceState.h  rdsRenderResourceStateTracker.cpp  rdsRenderResourceStateTracker.h  rdsRenderResourceType.h  rdsRenderResource_T.h  rds_render_api_layer_common.cpp  rds_render_api_layer_common.h  rds_render_api_layer_traits.h
src/render/api_layer/src/rds_render_api_layer/graph/: rdsRenderGraph.cpp  rdsRenderGraph.h  rdsRenderGraphAllocator.cpp  rdsRenderGraphAllocator.h  rdsRenderGraphDrawer.cpp  rdsRenderGraphDrawer.h  rdsRenderGraphModule.cpp  rdsRenderGraphModule.h  rdsRenderGraphPass.cpp  rdsRenderGraphPass.h  rdsRenderGraphResource.cpp  rdsRenderGraphResource.h  rdsRenderGraphResourcePool.cpp  rdsRenderGraphResourcePool.h
src/render/api_layer/src/rds_render_api_layer/mesh/: rdsEditMesh.cpp  rdsEditMesh.h  rdsRenderMesh.cpp  rdsRenderMesh.h  rdsWavefrontObjLoader.cpp  rdsWavefrontObjLoader.h
src/render/api_layer/src/rds_render_api_layer/pass/: rdsRenderTarget.h
src/render/api_layer/src/rds_render_api_layer/profiler/: rdsGpuProfiler.cpp  rdsGpuProfiler.h
src/render/api_layer/src/rds_render_api_layer/shader/: rdsBindlessResourceHandle.cpp  rdsBindlessResourceHandle.h  rdsBindlessResources.cpp  rdsBindlessResources.h  rdsMaterial.cpp  rdsMaterial.h  rdsMaterialPass.cpp  rdsMaterialPass.h  rdsRenderState.cpp  rdsRenderState.h  rdsShader.cpp  rdsShader.h  rdsShaderCompileRequest.cpp  rdsShaderCompileRequest.h  rdsShaderInfo.cpp  rdsShaderInfo.h  rdsShaderInterop.h  rdsShaderPass.cpp  rdsShaderPass.h  rdsShaderPermutations.cpp  rdsShaderPermutations.h  rdsShaderResource.cpp  rdsShaderResource.h  rdsShaderStock.cpp  rdsShaderStock.h
src/render/api_layer/src/rds_render_api_layer/texture/: rdsTexture.cpp  rdsTexture.h  rdsTexture2DArray.cpp  rdsTexture2DArray.h  rdsTexture3D.cpp  rdsTexture3D.h  rdsTextureCube.cpp  rdsTextureCube.h  rdsTextureStock.cpp  rdsTextureStock.h
src/render/api_layer/src/rds_render_api_layer/thread/: rdsRenderFrame.cpp  rdsRenderFrame.h  rdsRenderFrameParam.cpp  rdsRenderFrameParam.h  rdsRenderThread.cpp  rdsRenderThread.h  rdsRenderThreadQueue.cpp  rdsRenderThreadQueue.h
src/render/api_layer/src/rds_render_api_layer/transfer/: rdsLinearStagingBuffer.cpp  rdsLinearStagingBuffer.h  rdsRenderResourcesContext.cpp  rdsRenderResourcesContext.h  rdsTransferContext.cpp  rdsTransferContext.h  rdsTransferFrame.cpp  rdsTransferFrame.h
src/render/api_layer/src/rds_render_api_layer/vertex/: rdsVertex.cpp  rdsVertex.h  rdsVertexLayoutManager.cpp  rdsVertexLayoutManager.h
src/test/core/: CMakeLists.txt
src/test/core/src/: rds_core_test-config.h  rds_core_test-pch.h
src/test/core/src/rds_core_test/: rds_core_test.cpp
src/test/core/src/rds_core_test/common/: rds_core_test_common.h
src/test/editor/: CMakeLists.txt
src/test/editor/src/: rds_editor_test-pch.h
src/test/editor/src/rds_editor_test/: rds_editor_test.cpp
src/test/editor/src/rds_editor_test/common/: rds_editor_test_common.h
src/test/editor/src/rds_editor_test/vulkan/: rdsTest_CRenderableSystem.h  rdsTest_RenderGraph.h  rdsTest_RenderableSystem.h  rdsTest_VulkanEditorApp.cpp
(+492 files in other folders)
